k8s/opa-bundle-server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opa-bundle-server
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opa-bundle-server
  template:
    metadata:
      labels:
        app: opa-bundle-server
    spec:
      containers:
        - name: bundle-server
          image: python:3-alpine
          ports:
            - containerPort: 8080
              name: http
          command:
            - /bin/sh
            - -c
            - |
              [...]
          volumeMounts:
            - name: bundle-policy
              mountPath: /policies
              readOnly: true
          livenessProbe:
            httpGet:
              path: /bundles/kong/policy/bundle.tar.gz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /bundles/kong/policy/bundle.tar.gz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
      volumes:
        - name: bundle-policy
          configMap:
            name: opa-bundle-policy
---
apiVersion: v1
kind: Service
metadata:
  name: opa-bundle-server
  namespace: default
spec:
  selector:
    app: opa-bundle-server
  ports:
    - port: 8080
      nodePort: 30080
      targetPort: 8080
      protocol: TCP
      name: http
